# djangocms-text-ckeditor

./: .Python  .coverage  .coveragerc  .editorconfig  .eslintrc.js  .gitignore  .jshintrc  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  UPGRADE.md  addon.json  aldryn_config.py  gulpfile.js  legal.txt  npm-shrinkwrap.json  package-lock.json  package.json  requirements-tests.txt  requirements.txt  schemamigration.py  setup.cfg  setup.py  test_requirements.txt  test_settings.py  tox.ini  upgrading-ckeditor.md  webpack.config.js
.github/workflows/: codeql.yml  frontend.yml  lint.yml  test.yml
.tx/: config
djangocms_text_ckeditor/: __init__.py  apps.py  attribute_parsers.py  cms_plugins.py  cms_toolbars.py  compat.py  fields.py  forms.py  html.py  models.py  module_loading.py  picture_save.py  sanitizer.py  settings.py  utils.py  widgets.py
djangocms_text_ckeditor/migrations/: 0001_initial.py  0002_remove_related_name_for_cmsplugin_ptr.py  0002_rename_plugin.py  0003_set_related_name_for_cmsplugin_ptr.py  0004_auto_20160706_1339.py  0005_alter_text_cmsplugin_ptr.py
djangocms_text_ckeditor/migrations_django/: 0001_initial.py
djangocms_text_ckeditor/templatetags/: djangocms_text_ckeditor_tags.py
djangocms_text_ckeditor/test_app/: admin.py  cms_plugins.py  forms.py  models.py
private/: patch_moono_lisa.py  readme.md
tests/: base.py  fixtures.py  requirements.txt  settings.py  test_field.py  test_html.py  test_inline_editing.py  test_migrations.py  test_plugin.py  test_sanitizer.py  test_widget.py
(+337 files in other folders)
